--- a/RPS.html
+++ b/RPS.html
@@ -100,6 +100,7 @@
     }
 
     function reset(){
+      points = 0
       point_tracker.innerHTML = 'Points: ' + 0
       announcement_button.innerHTML = 'Game has been Reset'
     }
